# sport2vec

./: .gitignore  environment.yaml  pbp.py  pyproject.toml
src/sport2vec/: __init__.py  __main__.py  api.py  games.py  helpers.py  pbp.py
src/sport2vec/data/: api.py
src/sport2vec/data/nba/: __init__.py  games.py  pbp.py  players.py
