[project]
name = "sport2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alistair Pattison", email = "alistairpattison@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nba-api>=1.10.0",
    "polars>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
